// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`minBlockSize renders 0 1`] = `
Array [
  .c0 {
  min-block-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`minBlockSize renders function 1`] = `
Array [
  .c0 {
  min-block-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: has;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: has;
}

<div
    className="c0"
  />,
]
`;

exports[`minBlockSize renders invalid theme path 1`] = `
Array [
  .c0 {
  min-block-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`minBlockSize renders negative number 1`] = `
Array [
  .c0 {
  min-block-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`minBlockSize renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    min-block-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-block-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    min-block-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-block-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-block-size: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-block-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-block-size: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`minBlockSize renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    min-block-size: July;
  }
}

@media April {
  .c0 {
    min-block-size: August;
  }
}

@media January {
  .c0 {
    min-block-size: September;
  }
}

@media April {
  .c0 {
    min-block-size: November;
  }
}

@media June {
  .c0 {
    min-block-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    min-block-size: July;
  }
}

@media April {
  .c0 {
    min-block-size: August;
  }
}

@media January {
  .c0 {
    min-block-size: September;
  }
}

@media April {
  .c0 {
    min-block-size: November;
  }
}

@media June {
  .c0 {
    min-block-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    min-block-size: January;
  }
}

@media April {
  .c0 {
    min-block-size: December;
  }
}

@media January {
  .c0 {
    min-block-size: April;
  }
}

@media April {
  .c0 {
    min-block-size: May;
  }
}

@media June {
  .c0 {
    min-block-size: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    min-block-size: January;
  }
}

@media April {
  .c0 {
    min-block-size: December;
  }
}

@media January {
  .c0 {
    min-block-size: April;
  }
}

@media April {
  .c0 {
    min-block-size: May;
  }
}

@media June {
  .c0 {
    min-block-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`minBlockSize renders postitive number 1`] = `
Array [
  .c0 {
  min-block-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`minBlockSize renders string 1`] = `
Array [
  .c0 {
  min-block-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: June;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: June;
}

<div
    className="c0"
  />,
]
`;

exports[`minBlockSize renders valid theme path 1`] = `
Array [
  .c0 {
  min-block-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  min-block-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
